--- a/_config.yml
+++ b/_config.yml
@@ -14,15 +14,15 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Rusty Tools
+title: Formoxy Blog
 
-tagline: A site about using rusty tools, including forms and shop
+tagline: Get the most ouf of Formoxy
 
-description: About Rusty Rools, and how-to use them more creatively
+description: About Formoxy, news, tips and more...
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://blog.rusty-tools.com"
+url: "https://blog.formoxy.com"
 
 github:
   username: Rusty-Stuff # change to your github username
@@ -34,10 +34,10 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Franz Geffke
-  email: hello@rusty-forms.com # change to your email address
+  email: hello@formoxy.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://rusty-forms.com # change to your twitter homepage
+    - https://formoxy.com # change to your twitter homepage
     # - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
