formoxy is now formshive

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@ Gemfile.lock
 
 # Jekyll cache
 .jekyll-cache
+.jekyll-metadata
 _site
 
 # RubyGems
 *.gem
-.bundler
 
 # NPM dependencies
 node_modules
@@ -17,6 +17,11 @@ package-lock.json
 
 # IDE configurations
 .idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
 
 # Misc
+_sass/vendors
 assets/js/dist
